Fix layout bugs

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ h1, h2, h3, p {
 }
 
 #sidebar {
+    height: 100vh;
     grid-row: 1 / -1;
     grid-column: 1;
     border: 1px solid black;
@@ -125,10 +126,12 @@ h1, h2, h3, p {
 
 /* Main content */
 #main-content {
+    height: 100%;
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: 3fr 1fr;
     gap: 15px;
+    overflow-y: auto;
 
     padding: 24px 16px;
 }
@@ -145,9 +148,9 @@ h1, h2, h3, p {
     grid-area: 2 / 1;
 
     display: grid;
-    grid-template-rows: 1fr;
+    grid-template-rows: 200px;
     grid-template-columns: 1fr 1fr;
-    grid-auto-rows: 1fr;
+    grid-auto-rows: 200px;
     gap: 15px;
 }
 .publi {
@@ -164,13 +167,13 @@ h1, h2, h3, p {
 
 /* Side Main Content */
 #side-main {
+    height: 100%;
     display: grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr;
-    
 }
 .announ-container, .trend-container {
-    height: calc(100% - 4rem);  /* Edit correct sizes */
+    height: calc(100% - 4rem);
     border: 1px solid black;
     border-radius: 8px;
 
